1 [NEW] add azure storage shared project

--- a/Source/DevLib.Azure/DevLib.Azure.NET4/DevLib.Azure.NET4.csproj
+++ b/Source/DevLib.Azure/DevLib.Azure.NET4/DevLib.Azure.NET4.csproj
@@ -32,17 +32,13 @@
     <DocumentationFile>bin\Release\DevLib.Azure.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System" />
+  </ItemGroup>
+  <Import Project="..\DevLib.Azure.Storage\DevLib.Azure.Storage.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
