1 [VER] 1.0.4 2 [NEW] add azure storage - file

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /Source/DevLib.Azure.NET45.UnitTest/obj
 /Source/DevLib.Azure.Storage/StyleCop.Cache
 /Source/DevLib.Azure.sln.GhostDoc.user.dic
+/Source/DevLib.Azure.NET45/StyleCop.Cache
+/Source/DevLib.Azure.Storage/Settings.StyleCop
