1 [VER] 1.0.5; 2 [NEW] add table storage

--- a/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
+++ b/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Given_BlobClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Given_BlobContainer.cs" />
+    <Compile Include="Given_TableStorage.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevLib.Azure.NET45\DevLib.Azure.NET45.csproj">
