--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /Source/DevLib.Azure.sln.GhostDoc.user.dic
 /Source/DevLib.Azure.NET45/StyleCop.Cache
 /Source/DevLib.Azure.Storage/Settings.StyleCop
+/Source/DevLib.Azure.NET45/Settings.StyleCop
