1 [VER] 1.0.6; 2 [NEW] add TableDictionary

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ################################################################################
 
 *.suo
+*.StyleCop
 /Source/DevLib.Azure/DevLib.Azure.NET4/bin
 /Source/DevLib.Azure/DevLib.Azure.NET4/obj
 /Source/DevLib.Azure.NET45/bin
@@ -14,3 +15,4 @@
 /Source/DevLib.Azure.NET45/StyleCop.Cache
 /Source/DevLib.Azure.Storage/Settings.StyleCop
 /Source/DevLib.Azure.NET45/Settings.StyleCop
+/Source/StyleCop.Cache
