--- a/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
+++ b/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Given_BlobContainer.cs" />
     <Compile Include="Given_TableStorage.cs" />
+    <Compile Include="Given_TableDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevLib.Azure.NET45\DevLib.Azure.NET45.csproj">
