1 [VER] 1.0.7; 2 [BUG] fix bugs in TableDictionary 3 [CHG] add some ctors

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Source/DevLib.Azure.Storage/Settings.StyleCop
 /Source/DevLib.Azure.NET45/Settings.StyleCop
 /Source/StyleCop.Cache
+/Source/DevLib.Azure.NET45.UnitTest/StyleCop.Cache
