--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /Source/DevLib.Azure.NET45/Settings.StyleCop
 /Source/StyleCop.Cache
 /Source/DevLib.Azure.NET45.UnitTest/StyleCop.Cache
+/Source/DevLib.Azure.Logging/StyleCop.Cache
