--- a/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
+++ b/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Given_TableStorage.cs" />
     <Compile Include="Given_TableDictionary.cs" />
     <Compile Include="Given_QueueStorage.cs" />
+    <Compile Include="Given_LoggingMessageTableEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevLib.Azure.NET45\DevLib.Azure.NET45.csproj">
