1 [VER] 1.1.1; 2 [CHG] add log functions; 3 [CHG] change some methods in storage; 4 [CHG] rename FileShare to FileStorage;

--- a/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
+++ b/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Given_TableDictionary.cs" />
     <Compile Include="Given_QueueStorage.cs" />
     <Compile Include="Given_LoggingMessageTableEntity.cs" />
+    <Compile Include="Given_Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevLib.Azure.NET45\DevLib.Azure.NET45.csproj">
