--- a/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
+++ b/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
@@ -81,14 +81,16 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Given_BlobClient.cs" />
+    <Compile Include="DevLib.Azure.Logging\Given_Logger.cs" />
+    <Compile Include="DevLib.Azure.Storage\Given_BlobClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Given_BlobContainer.cs" />
-    <Compile Include="Given_TableStorage.cs" />
-    <Compile Include="Given_TableDictionary.cs" />
-    <Compile Include="Given_QueueStorage.cs" />
-    <Compile Include="Given_LoggingMessageTableEntity.cs" />
-    <Compile Include="Given_Logger.cs" />
+    <Compile Include="DevLib.Azure.Storage\Given_BlobContainer.cs" />
+    <Compile Include="DevLib.Azure.Storage\Given_TableStorage.cs" />
+    <Compile Include="DevLib.Azure.Storage\Given_TableDictionary.cs" />
+    <Compile Include="DevLib.Azure.Storage\Given_QueueStorage.cs" />
+    <Compile Include="DevLib.Azure.Logging\Given_LoggingMessageTableEntity.cs" />
+    <Compile Include="DevLib.Azure.Logging\Given_TableLogger.cs" />
+    <Compile Include="DevLib.Azure.Logging\Given_BlobLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevLib.Azure.NET45\DevLib.Azure.NET45.csproj">
