--- a/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
+++ b/Source/DevLib.Azure.NET45.UnitTest/DevLib.Azure.NET45.UnitTest.csproj
@@ -84,6 +84,7 @@
     <Compile Include="DevLib.Azure.Logging\Given_Logger.cs" />
     <Compile Include="DevLib.Azure.Storage\Given_BlobClient.cs" />
     <Compile Include="DevLib.Azure.Storage\Given_DictionaryTableEntity.cs" />
+    <Compile Include="DevLib.Azure.Storage\Given_TableEntityExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DevLib.Azure.Storage\Given_BlobContainer.cs" />
     <Compile Include="DevLib.Azure.Storage\Given_TableStorage.cs" />
