1 [VER] 1.5.1; 2 [NEW] add LoggerFactory;

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /Source/StyleCop.Cache
 /Source/DevLib.Azure.NET45.UnitTest/StyleCop.Cache
 /Source/DevLib.Azure.Logging/StyleCop.Cache
+/Source/DevLib.Azure.Logging.Shared/StyleCop.Cache
